# ReadStat

./: .travis.yml  CMakeLists.txt  appveyor.yml
cmake/: FindRAGEL.cmake
